--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/build": "^21.0.1",
     "@angular/cli": "^20.0.6",
     "@angular/compiler-cli": "^21.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
